--- a/WebConnector/webpages/stylesheet.css
+++ b/WebConnector/webpages/stylesheet.css
@@ -11,11 +11,22 @@
 }
 
 body, html {
-  background-image: url("http://wordpressjava.azurewebsites.net/wp-content/uploads/2017/05/background.png");
+  background-image: url("http://wordpressjava.azurewebsites.net/wp-content/uploads/2017/06/small.png");
   background-attachment: fixed;
   background-repeat: no-repeat;
+  background-size: 100% 100%;
   height: 100%;
   top = 0;
+}
+
+@media only screen and (max-height: 1080px) {
+  body, html {
+    background-image: url("http://wordpressjava.azurewebsites.net/wp-content/uploads/2017/06/background.png");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    height: 100%;
+    top = 0;
+  }
 }
 /*
 
